# model/books.js
@@ -13,6 +13,22 @@ const bookSchema = new mongoose.Schema({
     type: String,
     required: [true, 'Genre is required'],
   },
+  year: {
+    type: Number,
+    required: [true, 'Genre is required'],
+  },
+  pages: {
+    type: Number,
+    required: [true, 'Add number of pages'],
+  },
+  publisher: {
+    type: String,
+    required: [true, 'Publisher is required'],
+  },
+  languages: {
+    type: String,
+    required: [true, 'Languages is required'],
+  },
 });
 
 const Book = mongoose.model('Book', bookSchema);
